--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "version": 2,
   "framework": "nextjs",
   "buildCommand": "next build",
-  "installCommand": "corepack enable && pnpm install --no-frozen-lockfile"
+  "installCommand": "corepack enable && pnpm install --no-frozen-lockfile",
+  "env": {
+    "NODE_VERSION": "20"
+  }
 }
